configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  namespace: node
  labels:
    app: nodejs-demo
    name: nodejs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-demo
      name: nodejs-pod
  template:
    metadata:
      name: nodejs-pod
      labels:
        name: nodejs-pod
        app: nodejs-demo
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: special-config
      - name: config-vol
        configMap:
          name: log-config
          items:
            - key: log_level
              path: log_level
      containers:
        - name: nodejs
          image: anoop600/example_nodejs:main
          volumeMounts:
          - name: config-vol
            mountPath: /var/path/
          - name: config-volume
            mountPath: /var/lib/
