secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  namespace: node
  labels:
    app: nodejs-demo
    name: nodejs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-demo
      name: nodejs-pod
  template:
    metadata:
      name: nodejs-pod
      labels:
        name: nodejs-pod
        app: nodejs-demo
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: dotfile-secret
      containers:
        - name: nodejs
          image: anoop600/example_nodejs:main
          volumeMounts:
          - name: secret-volume
            mountPath: /var/lib/
